2011-08-02  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: arrow is a pain to click in console. Drive-by selection reset fix.
        https://bugs.webkit.org/show_bug.cgi?id=65467

        Reviewed by Yury Semikhatsky.

        * inspector/front-end/ConsoleView.js:
        (WebInspector.ConsoleView.prototype._messagesClicked):
        * inspector/front-end/ObjectPropertiesSection.js:
        (WebInspector.ObjectPropertyTreeElement):
        * inspector/front-end/inspector.css:
        (.properties-tree li):
        (.properties-tree li.parent::before):
        * inspector/front-end/treeoutline.js:
        (TreeElement.treeElementToggled):

2011-08-01  Pavel Feldman  <pfeldman@google.com>

        Web Inspector: button + "New style rule"
        https://bugs.webkit.org/show_bug.cgi?id=65409

        Reviewed by Yury Semikhatsky.

        Test: inspector/styles/styles-add-new-rule.html

        * inspector/front-end/StylesSidebarPane.js:
        (WebInspector.StylesSidebarPane):
        (WebInspector.BlankStylePropertiesSection.prototype.editingSelectorCommitted):

2011-08-01  Luke Macpherson   <macpherson@chromium.org>

        Don't set m_fontDirty when setting zoom unless zoom has actually changed
        https://bugs.webkit.org/show_bug.cgi?id=65092

        Reviewed by Darin Adler.

        No new tests as no functionality changed - this is an optimization that
        should be logically equivalent to the current code.

        The intent here is to avoid setting m_fontDirty unless the fornt information is actually dirty.

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::styleForDocument):
        (WebCore::CSSStyleSelector::applyProperty):
        Use setZoom and setEffectiveZoom wrapper functions.
        * css/CSSStyleSelector.h:
        (WebCore::CSSStyleSelector::setZoom):
        Wrapper for m_style->setZoom() that automatically updates m_fontDirty.
        (WebCore::CSSStyleSelector::setEffectiveZoom):